# acerola-p2p

./: Cargo.toml  README.md  TODO.md
.claude/rules/: RULES.md
.github/workflows/: test.yml
acerola/: Cargo.toml  TODO.md  rustfmt.toml
acerola/src/: api.rs  lib.rs
acerola/src/lib/: error.rs  guard.rs  network.rs  peer.rs  protocol.rs  transport.rs
acerola/src/lib/network/: state.rs
acerola/src/lib/protocol/: rpc.rs
acerola/src/lib/transport/: iroh.rs  mod.rs
acerola/src/lib/transport/iroh/: builder.rs  connection.rs  transport.rs
acerola/src/tests/: mock_transport.rs  mod.rs
src/: api.rs  lib.rs
src/core/: mod.rs
src/core/connection/p2p/: network_manager.rs
src/core/connection/p2p/handlers/: rpc.rs
src/core/connection/p2p/state/: network_state.rs
src/data/: mod.rs
src/data/remote/p2p/: iroh_transport.rs  open_guard.rs  peer_guard.rs  token_guard.rs
src/infra/: mod.rs
src/infra/error/: mod.rs
src/infra/error/messages/: connection_error.rs  rpc_error.rs
src/infra/error/translations/: connection_translation.rs  rpc_translation.rs
src/infra/remote/p2p/: connection_context.rs  guard.rs  peer_id.rs  protocol_handler.rs  transport.rs
src/lib/: guard.rs  network.rs
src/lib/network/: state.rs
src/lib/protocol/: rpc.rs
src/lib/transport/: iroh.rs
src/tests/: mod.rs
src/tests/utils/: mock_transport.rs
